Bug 155350 - Autocorrect does not work in comments (gtk3)
Summary: Autocorrect does not work in comments (gtk3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.5.1 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.4.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoCorrect-Complete Writer-Comments
  Show dependency treegraph
 
Reported: 2023-05-16 09:11 UTC by Andreas Heinlein
Modified: 2023-05-31 11:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Heinlein 2023-05-16 09:11:57 UTC
Description:
I noticed that autocorrect does not work in comments even if turned on. With the relevant options enabled, entering *fat* in the document formats it bold, while doing the same in a comment does not.

Seen in LO 7.4.5.1 from debian bullseye-backports. Behaves as expected in LO 7.0.4.2 from debian bullseye.

Actual Results:
Text in comments is not affected by autocorrect.

Expected Results:
Autocorrect works in comments as it does in normal documents.


Reproducible: Always


User Profile Reset: No

Additional Info:
Might be related to bug #138023, which reports exactly the opposite behaviour. That bug was never closed, but I suspect this has been "fixed" by changing the behaviour in comments to "Always off" instead of respecting the settings. Would be a rather bad solution.
Comment 1 raal 2023-05-20 10:48:20 UTC
works in Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)

but not in Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 3df90fbc24a650cf6b0767d00821753ed3d4f5f4
CPU threads: 4; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 2 raal 2023-05-20 11:03:53 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.3.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 e20bdd2f28dd8f4a81fc226f4371cdca1bf99b48 is the first bad commit
commit e20bdd2f28dd8f4a81fc226f4371cdca1bf99b48
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Mar 2 04:34:18 2022 +0100

    source 8badc2314961e87e0b2cc01164442d97e20f9419

130775: Resolves: tdf#145580 need to use gtk_im_context_filter_keypress | https://gerrit.libreoffice.org/c/core/+/130775
Comment 3 Caolán McNamara 2023-05-23 16:10:28 UTC
This seems to be because there are two ways to input text, "directly" with key press events and through the input method. And the AutoCorrect is only hooked to the key press event case. Somewhere along the line gtk started preferring to supply more via the IM.

In the main document situation we go through a big hack tower in GtkSalFrame::IMHandler::signalIMCommit to see if something received through the Input Method is something that could be represented as a single key press event and if so send one of those instead. While those comments just forward the input method data onwards without the second-guessing hackery.

Probably better to attempt to do AutoCorrect for text received through the IM rather than continue trying to out-guess the IM and reroute to the older mechanism
Comment 4 Commit Notification 2023-05-23 20:10:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c43e39a7b7f4b0ed6165af966cce8057a93eb22f

tdf#155350 Do AutoCorrect of Input Method text

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-05-24 07:27:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/1e206d5b53ed1e11f2bab2437dd6fccdab4586ce

tdf#155350 Do AutoCorrect of Input Method text

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2023-05-24 11:04:34 UTC
Only happening with GTK3
Comment 7 Commit Notification 2023-05-30 19:42:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-4":

https://git.libreoffice.org/core/commit/8ecb7a96c332fe070fc471fa0ac04c5026c7f396

tdf#155350 Do AutoCorrect of Input Method text

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.