tdf#155350 Do AutoCorrect of Input Method text

for all of SvxAutoCorrect::IsAutoCorrectChar() chars not just
quotes

Change-Id: I368836ea3c2dcdcc7fbe6906d7ae886f312d73d3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152107
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>